added GSonFactory and Files.writeString